[package]
name = "actix-daemon-utils"
version = "0.1.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Daemon Utilities by actix."
repository = "https://github.com/aoyagikouhei/actix-daemon-utils-rs"
keywords = ["actix", "daemon"]
categories = ["asynchronous"]
readme = "Readme.md"
documentation = "https://docs.rs/actix-daemon-utils"

[dependencies]
actix = "^0.9"
actix-rt = "^1.0"
tokio = "^0.2"