[package]
name = "actix-daemon-utils"
version = "0.6.0"
authors = ["aoyagikouhei <aoyagi.kouhei@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Daemon Utilities by actix."
repository = "https://github.com/aoyagikouhei/actix-daemon-utils-rs"
keywords = ["actix", "daemon"]
categories = ["asynchronous"]
readme = "Readme.md"
documentation = "https://docs.rs/actix-daemon-utils"

[dependencies]
actix = "~0.13.0"
actix-rt = "~2"
futures-util = "~0.3"