[package]
name = "web"
version = "0.1.0"
authors = ["aoyagikouhei <aoyagi_kouhei@uniquevision.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "^4.0"
actix-daemon-utils = {path="../.."}
env_logger = "^0.9"
tokio = { version = "^1", features = ["signal"] }